--- a/notebook-interactive-rl.html
+++ b/notebook-interactive-rl.html
@@ -21,7 +21,7 @@
         .notebook-container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 20px;
+            padding: 80px 20px 20px 20px; /* Added top padding for fixed navbar */
         }
 
         .project-header {
@@ -396,9 +396,145 @@
             .step::after { display: none; }
             .project-header h1 { font-size: 2em; }
         }
+        /* Navigation Styles */
+        .navbar {
+            background: rgba(30, 41, 59, 0.9);
+            backdrop-filter: blur(16px);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+            border-bottom: 1px solid rgba(148, 163, 184, 0.1);
+        }
+
+        .nav-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 60px;
+        }
+
+        .nav-logo {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            font-size: 1.2em;
+            font-weight: 600;
+            color: #f1f5f9;
+        }
+
+        .nav-menu {
+            display: flex;
+            list-style: none;
+            gap: 30px;
+            margin: 0;
+            padding: 0;
+        }
+
+        .nav-link {
+            text-decoration: none;
+            color: #94a3b8;
+            font-weight: 500;
+            transition: color 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+
+        .nav-link:hover {
+            color: #3b82f6;
+        }
+
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+        }
+
+        .bar {
+            width: 25px;
+            height: 3px;
+            background: #94a3b8;
+            margin: 3px 0;
+            transition: 0.3s;
+            border-radius: 2px;
+        }
+
+        @media screen and (max-width: 768px) {
+            .nav-menu {
+                position: fixed;
+                left: -100%;
+                top: 60px;
+                flex-direction: column;
+                background: rgba(30, 41, 59, 0.95);
+                width: 100%;
+                text-align: center;
+                transition: 0.3s;
+                box-shadow: 0 10px 27px rgba(0, 0, 0, 0.3);
+                backdrop-filter: blur(16px);
+                border-top: 1px solid rgba(148, 163, 184, 0.1);
+                padding: 20px 0;
+            }
+
+            .nav-menu.active {
+                left: 0;
+            }
+
+            .nav-menu li {
+                margin: 10px 0;
+            }
+
+            .hamburger {
+                display: flex;
+            }
+
+            .hamburger.active .bar:nth-child(2) {
+                opacity: 0;
+            }
+
+            .hamburger.active .bar:nth-child(1) {
+                transform: translateY(8px) rotate(45deg);
+            }
+
+            .hamburger.active .bar:nth-child(3) {
+                transform: translateY(-8px) rotate(-45deg);
+            }
+        }
     </style>
 </head>
 <body>
+    <!-- Navigation Menu -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <span class="emoji">🎯</span>
+                <span>AI Tic-Tac-Toe</span>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="index.html#introduction" class="nav-link">Introduction</a></li>
+                <li><a href="index.html#ai-brains" class="nav-link">AI Methods</a></li>
+                <li><a href="index.html#interactive" class="nav-link">Interactive Demo</a></li>
+                <li><a href="index.html#results" class="nav-link">Results</a></li>
+                <li><a href="index.html#playground" class="nav-link">Playground</a></li>
+                <li><a href="notebook-interactive-rl.html" class="nav-link active">
+                    <span class="emoji">📚</span> Notebook
+                </a></li>
+                <li><a href="https://github.com/ArielSoothy/Project-4-TIC-TAC-TOE-with-RL" class="nav-link" target="_blank">
+                    <span class="emoji">🔗</span> GitHub
+                </a></li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </div>
+    </nav>
+
     <div class="notebook-container">
         <!-- Project Header -->
         <div class="project-header">
@@ -931,6 +1067,21 @@
                 }
             });
         });
+
+        // Mobile menu functionality
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('.nav-menu');
+
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navMenu.classList.toggle('active');
+        });
+
+        // Close mobile menu when a link is clicked
+        document.querySelectorAll('.nav-link').forEach(n => n.addEventListener('click', () => {
+            hamburger.classList.remove('active');
+            navMenu.classList.remove('active');
+        }));
     </script>
 </body>
 </html> 
